# -MAXMIDI

./: README.md
MAXMIDI copy/: README.md  pyproject.toml
MAXMIDI copy/src/: a.py  api.py  chord.py  clock.py  device.py  drums.py  file.py  humanize.py  in.py  message.py  out.py  pattern.py  ports.py  presets.py  sequencer.py  smf.py  song.py  sync.py  track.py
