[project]
name = "mymidi-package"
version = "0.1.0"
description = "A simple Python package using MIDIUtil to create MIDI files"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.dependencies]
MIDIUtil = "^1.3.1"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"